// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard > should combine metric value and comparison 1`] = `
<div>
  <div
    class="card card--default kpi"
    data-slot="kpi"
  >
    <div
      class="kpi__header"
      data-slot="kpi-header"
    >
      <dt
        class="kpi__title"
        data-slot="kpi-title"
      >
        COE Premiums
      </dt>
    </div>
    <div
      class="kpi__content"
      data-slot="kpi-content"
    >
      <dd
        class="kpi__value text-accent text-4xl"
        data-slot="kpi-value"
      >
        50,000
      </dd>
    </div>
    <div
      class="kpi__footer"
      data-slot="kpi-footer"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="chip chip--success chip--sm chip--primary trend-chip trend-chip--sm"
          data-slot="chip"
          data-trend="up"
        >
          <svg
            class="trend-chip__indicator"
            data-slot="trend-chip-indicator"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 19V5m-5 5 5-5 5 5"
            />
          </svg>
          <span
            class="chip__label"
            data-slot="chip-label"
          >
             
            <span
              class="trend-chip__value"
              data-slot="trend-chip-value"
            >
              <span
                class="number-value"
                data-slot="number-value"
              >
                <span
                  class="number-value__value"
                  data-slot="number-value-value"
                >
                  11.1%
                </span>
              </span>
            </span>
             
          </span>
        </span>
        <span
          class="text-muted text-sm"
        >
          vs last month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard > should render with hero variant 1`] = `
<div>
  <div
    class="card card--default kpi border-l-4 border-accent"
    data-slot="kpi"
  >
    <div
      class="kpi__header"
      data-slot="kpi-header"
    >
      <dt
        class="kpi__title"
        data-slot="kpi-title"
      >
        Total Registrations
      </dt>
    </div>
    <div
      class="kpi__content"
      data-slot="kpi-content"
    >
      <dd
        class="kpi__value text-accent text-5xl"
        data-slot="kpi-value"
      >
        10,000
      </dd>
    </div>
    <div
      class="kpi__footer"
      data-slot="kpi-footer"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="chip chip--success chip--sm chip--primary trend-chip trend-chip--sm"
          data-slot="chip"
          data-trend="up"
        >
          <svg
            class="trend-chip__indicator"
            data-slot="trend-chip-indicator"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 19V5m-5 5 5-5 5 5"
            />
          </svg>
          <span
            class="chip__label"
            data-slot="chip-label"
          >
             
            <span
              class="trend-chip__value"
              data-slot="trend-chip-value"
            >
              <span
                class="number-value"
                data-slot="number-value"
              >
                <span
                  class="number-value__value"
                  data-slot="number-value-value"
                >
                  11.1%
                </span>
              </span>
            </span>
             
          </span>
        </span>
        <span
          class="text-muted text-sm"
        >
          vs last month
        </span>
      </div>
    </div>
  </div>
</div>
`;
